# diablo-whole-body

./: .gitignore  README.md
src/diablo-onboard-sdk-with-serial/: README.md
src/diablo-onboard-sdk-with-serial/example/robot_status/: CMakeLists.txt  main.cpp
src/mpc/config/: param.yaml
src/mpc/include/: mpc.h
src/mpc/include/mpc_utils/: traj_anal.hpp
src/mpc/launch/: test_mpc.launch
src/mpc/msg/: Polynome.msg
src/mpc/src/: mpc.cpp
src/planner/front_end/: CMakeLists.txt  package.xml
src/planner/front_end/include/front_end/: kino_astar.h  ompl_planner_mannager.h
src/planner/front_end/src/: kino_astar.cpp  ompl_planner_manager.cpp
src/planner/grid_map/: CMakeLists.txt
src/planner/grid_map/include/grid_map/: global_map_manager.h
src/planner/grid_map/src/: global_map_manager.cpp
src/planner/robo_map/: CMakeLists.txt  package.xml
src/planner/robo_map/include/robo_map/: robo_map_manager.h
src/planner/robo_map/src/: robo_map_manager.cpp
src/planner/ugv_planner/: CMakeLists.txt  package.xml
src/planner/ugv_planner/include/minco_opt/: lbfgs_raw.hpp  traj_opt.h
src/planner/ugv_planner/include/plan_manage/: planner_manager.h
src/planner/ugv_planner/include/ugv_planner/: traj_visualization.h
src/planner/ugv_planner/launch/: run_all.launch  simulator.xml
src/planner/ugv_planner/param/: default.rviz
src/planner/ugv_planner/src/: minco_optimizer.cpp  planner_manager.cpp  traj_visualization.cpp
src/simulator/diablo_model/: CMakeLists.txt  package.xml
src/simulator/diablo_model/src/: ugv_vis.cpp
src/simulator/fake_ugv/src/: poscmd_2_odom.cpp
src/simulator/globalmap_generator/PCDFiles/: .gitignore
src/simulator/globalmap_generator/launch/: tmap_gene.launch
src/simulator/globalmap_generator/src/: tmap_generate.cpp
